[gd_scene load_steps=10 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/Menu_3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu/Menu_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu/Menu_1.png" type="Texture" id=4]
[ext_resource path="res://Fonts/computer_pixel-7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sounds/Click.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[node name="Pause" type="CanvasLayer"]
layer = 100

[node name="Pause" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 0.345098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume" type="RichTextLabel" parent="Pause"]
margin_left = 128.0
margin_top = 56.0
margin_right = 176.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "RESUME"
text = "RESUME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Pause"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 128.0
margin_top = 56.0
margin_right = 169.0
margin_bottom = 73.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="RichTextLabel" parent="Pause"]
margin_left = 136.0
margin_top = 80.0
margin_right = 168.0
margin_bottom = 96.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "MENU"
text = "MENU"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="Pause"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 136.0
margin_top = 80.0
margin_right = 169.0
margin_bottom = 97.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="RichTextLabel" parent="Pause"]
margin_left = 136.0
margin_top = 104.0
margin_right = 168.0
margin_bottom = 120.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "EXIT"
text = "EXIT"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="Pause"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 136.0
margin_top = 104.0
margin_right = 169.0
margin_bottom = 121.0
texture_normal = ExtResource( 2 )

[node name="click" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource( 6 )
[connection signal="pressed" from="Pause/TextureButton" to="Pause" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Pause/TextureButton2" to="Pause" method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Pause/TextureButton3" to="Pause" method="_on_TextureButton3_pressed"]
